--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="njan sundgharan.jpeg" rel="icon">
+  <link href=".njan sundgharan.jpeg" rel="icon">
   <link href="https://th.bing.com/th/id/OIP.hJU52q1kg_TptfUBQdPT-QAAAA?w=161&h=180&c=7&r=0&o=5&pid=1.7" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
