--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   <div class="count-box text-center">
                     <i class="bi bi-award" style="color: #ffb459; font-size: 40px;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>Awards</strong> Best Coderator etc.</p>
+                    <p><strong>Awards</strong> Best coordinator etc...</p>
                   </div>
                 </div>
                 
